--- a/index.html
+++ b/index.html
@@ -1,218 +1,262 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Study Tracker</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f7f7f7;
-      margin: 0;
-      padding: 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .tracker {
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      width: 90%;
-      max-width: 500px;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .controls {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 20px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-    select, button {
-      padding: 8px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    button {
-      background: #4CAF50;
-      color: #fff;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    button:hover {
-      background: #45a049;
-    }
-    .log {
-      margin-top: 20px;
-    }
-    .entry {
-      background: #f0f0f0;
-      padding: 10px;
-      margin: 5px 0;
-      border-radius: 6px;
-    }
-    .progress-container {
-      margin-top: 20px;
-    }
-    .progress {
-      height: 20px;
-      background: #ddd;
-      border-radius: 10px;
-      overflow: hidden;
-    }
-    .progress-bar {
-      height: 100%;
-      background: #4CAF50;
-      width: 0%;
-      transition: width 0.3s ease;
-    }
-    .totals {
-      text-align: center;
-      margin-top: 10px;
-      font-weight: bold;
-    }
-    .reset {
-      margin-top: 15px;
-      display: flex;
-      justify-content: center;
-    }
-    .reset button {
-      background: #e53935;
-    }
-    .reset button:hover {
-      background: #c62828;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Study Tracker</title>
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background: #f7f7f7;
+  margin: 0;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+.tracker {
+  background: #fff;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  width: 90%;
+  max-width: 500px;
+}
+h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.controls {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+select, button {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+}
+button {
+  background: #4CAF50;
+  color: #fff;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+button:hover { background: #45a049; }
+.log { margin-top: 20px; }
+.entry {
+  background: #f0f0f0;
+  padding: 10px;
+  margin: 5px 0;
+  border-radius: 6px;
+}
+.progress-container {
+  margin-top: 20px;
+}
+.progress { height: 20px; background: #ddd; border-radius: 10px; overflow: hidden; margin-top:5px; }
+.progress-bar { height: 100%; background: #4CAF50; width: 0%; transition: width 0.3s ease; }
+.totals { text-align: center; margin-top: 10px; font-weight: bold; }
+.reset { margin-top: 15px; display: flex; justify-content: center; }
+.reset button { background: #e53935; }
+.reset button:hover { background: #c62828; }
+.forecast { text-align: center; margin-top: 10px; font-style: italic; color: #555; }
+</style>
 </head>
 <body>
-  <div class="tracker">
-    <h1>Study Tracker</h1>
-    <div class="controls">
-      <select id="daySelect">
-        <option value="" disabled selected>Select Day</option>
-        <option>Monday</option>
-        <option>Tuesday</option>
-        <option>Wednesday</option>
-        <option>Thursday</option>
-        <option>Friday</option>
-        <option>Saturday</option>
-        <option>Sunday</option>
-      </select>
+<div class="tracker">
+  <h1>Study Tracker</h1>
+  <div class="controls">
+    <select id="daySelect">
+      <option value="" disabled selected>Select Day</option>
+      <option>Monday</option>
+      <option>Tuesday</option>
+      <option>Wednesday</option>
+      <option>Thursday</option>
+      <option>Friday</option>
+      <option>Saturday</option>
+      <option>Sunday</option>
+    </select>
 
-      <select id="hoursSelect">
-        <option value="" disabled selected>Hours</option>
-        <option value="0.5">0.5</option>
-        <option value="1">1</option>
-        <option value="1.5">1.5</option>
-        <option value="2">2</option>
-        <option value="2.5">2.5</option>
-        <option value="3">3</option>
-      </select>
+    <select id="hoursSelect">
+      <option value="" disabled selected>Hours</option>
+      <option value="0.5">0.5</option>
+      <option value="1">1</option>
+      <option value="1.5">1.5</option>
+      <option value="2">2</option>
+      <option value="2.5">2.5</option>
+      <option value="3">3</option>
+    </select>
 
-      <select id="sectionsSelect">
-        <option value="" disabled selected>Sections</option>
-        <option value="0">0</option>
-        <option value="0.5">0.5</option>
-        <option value="1">1</option>
-        <option value="1.5">1.5</option>
-        <option value="2">2</option>
-        <option value="2.5">2.5</option>
-        <option value="3">3</option>
-        <option value="3.5">3.5</option>
-        <option value="4">4</option>
-        <option value="4.5">4.5</option>
-        <option value="5">5</option>
-      </select>
+    <select id="sectionsSelect">
+      <option value="" disabled selected>Sections</option>
+      <option value="0">0</option>
+      <option value="0.5">0.5</option>
+      <option value="1">1</option>
+      <option value="1.5">1.5</option>
+      <option value="2">2</option>
+      <option value="2.5">2.5</option>
+      <option value="3">3</option>
+      <option value="3.5">3.5</option>
+      <option value="4">4</option>
+      <option value="4.5">4.5</option>
+      <option value="5">5</option>
+    </select>
 
-      <button onclick="logStudy()">Log</button>
-    </div>
-
-    <div class="log" id="log"></div>
-
-    <div class="progress-container">
-      <div class="progress"><div class="progress-bar" id="progressBar"></div></div>
-      <div class="totals" id="totals">Total: 0 hours, 0 sections</div>
-    </div>
-
-    <div class="reset">
-      <button onclick="resetWeek()">Reset Week</button>
-    </div>
+    <button onclick="logStudy()">Log</button>
   </div>
 
-  <script>
-    let totalHours = 0;
-    let totalSections = 0;
-    const goalSections = 7.5; // your weekly goal
+  <div class="log" id="log"></div>
 
-    // Load saved data on page load
-    window.onload = () => {
-      const savedData = JSON.parse(localStorage.getItem("studyData"));
-      if (savedData) {
-        totalHours = savedData.totalHours;
-        totalSections = savedData.totalSections;
-        document.getElementById("log").innerHTML = savedData.logHTML;
-        updateTotals();
-      }
-    };
+  <div class="progress-container">
+    <div>Weekly Progress:</div>
+    <div class="progress"><div class="progress-bar" id="weeklyProgressBar"></div></div>
+    <div class="totals" id="weeklyTotals">0 hours, 0 sections this week</div>
+  </div>
 
-    function logStudy() {
-      const day = document.getElementById("daySelect").value;
-      const hours = parseFloat(document.getElementById("hoursSelect").value);
-      const sections = parseFloat(document.getElementById("sectionsSelect").value);
+ <div class="progress-container">
+  <div>Overall Progress:</div>
+  <div class="progress" style="position: relative;">
+    <div class="progress-bar" id="overallProgressBar"></div>
+    <div id="milestoneMarker" style="
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 2px;
+        background: blue;
+        left: 0%;
+        pointer-events: none;"></div>
+  </div>
+  <div class="totals" id="overallTotals">0 hours, 0 sections total</div>
+</div>
 
-      if (!day || isNaN(hours) || isNaN(sections)) {
-        alert("Please select day, hours, and sections.");
-        return;
-      }
+  <div class="forecast" id="forecast"></div>
 
-      totalHours += hours;
-      totalSections += sections;
+  <div class="reset">
+    <button onclick="resetWeek()">Reset Week</button>
+  </div>
+</div>
 
-      const log = document.getElementById("log");
-      const entry = document.createElement("div");
-      entry.classList.add("entry");
-      entry.textContent = `${day}: ${hours} hours, ${sections} sections completed`;
-      log.appendChild(entry);
+<script>
+const weeklyGoal = 7.5;   // your weekly sections target
+const totalGoal = 45;      // total sections until milestone
 
-      updateTotals();
-      saveData();
+let weeklyHours = 0;
+let weeklySections = 0;
+let overallHours = 0;
+let overallSections = 0;
 
-      // Reset selectors
-      document.getElementById("daySelect").selectedIndex = 0;
-      document.getElementById("hoursSelect").selectedIndex = 0;
-      document.getElementById("sectionsSelect").selectedIndex = 0;
-    }
+// Ideal weekly pace to reach milestone in remaining weeks
+const totalWeeks = 10; // total weeks until milestone
+const projectWeeks = 4; // weeks reserved for milestone project
+const studyWeeks = totalWeeks - projectWeeks; // 6 weeks of study
+const idealWeeklyPace = totalGoal / studyWeeks; // 45 / 6 = 7.5 sections/week
 
-    function updateTotals() {
-      document.getElementById("totals").textContent =
-        `Total: ${totalHours} hours, ${totalSections} sections`;
+// Load saved data
+window.onload = () => {
+  const saved = JSON.parse(localStorage.getItem("studyData"));
+  if(saved){
+    weeklyHours = saved.weeklyHours;
+    weeklySections = saved.weeklySections;
+    overallHours = saved.overallHours;
+    overallSections = saved.overallSections;
+    document.getElementById("log").innerHTML = saved.logHTML;
+    updateDisplay();
+  }
+};
 
-      const progress = Math.min((totalSections / goalSections) * 100, 100);
-      document.getElementById("progressBar").style.width = progress + "%";
-    }
+function logStudy(){
+  const day = document.getElementById("daySelect").value;
+  const hours = parseFloat(document.getElementById("hoursSelect").value);
+  const sections = parseFloat(document.getElementById("sectionsSelect").value);
 
-    function resetWeek() {
-      totalHours = 0;
-      totalSections = 0;
-      document.getElementById("log").innerHTML = "";
-      updateTotals();
-      localStorage.removeItem("studyData");
-    }
+  if(!day || isNaN(hours) || isNaN(sections)){
+    alert("Please select day, hours, and sections.");
+    return;
+  }
 
-    function saveData() {
-      const data = {
-        totalHours,
-        totalSections,
-        logHTML: document.getElementById("log").innerHTML
-      };
-      localStorage.setItem("studyData", JSON.stringify(data));
-    }
-  </script>
+  weeklyHours += hours;
+  weeklySections += sections;
+  overallHours += hours;
+  overallSections += sections;
+
+  const log = document.getElementById("log");
+  const entry = document.createElement("div");
+  entry.classList.add("entry");
+  entry.textContent = `${day}: ${hours} hours, ${sections} sections`;
+  log.appendChild(entry);
+
+  updateDisplay();
+  saveData();
+
+  document.getElementById("daySelect").selectedIndex = 0;
+  document.getElementById("hoursSelect").selectedIndex = 0;
+  document.getElementById("sectionsSelect").selectedIndex = 0;
+}
+
+function updateDisplay(){
+  // Weekly
+  document.getElementById("weeklyTotals").textContent = `${weeklyHours} hours, ${weeklySections} sections this week`;
+  document.getElementById("weeklyProgressBar").style.width = Math.min((weeklySections/weeklyGoal)*100,100) + "%";
+
+  // Overall
+  document.getElementById("overallTotals").textContent = `${overallHours} hours, ${overallSections} sections total`;
+  document.getElementById("overallProgressBar").style.width = Math.min((overallSections/totalGoal)*100,100) + "%";
+
+  // Forecast calculation
+  const weeksElapsed = Math.ceil(overallSections / idealWeeklyPace);
+  const remainingSections = totalGoal - overallSections;
+  const avgPerWeek = weeksElapsed ? overallSections / weeksElapsed : idealWeeklyPace;
+  const weeksLeft = remainingSections / avgPerWeek;
+  const forecastDate = new Date();
+  forecastDate.setDate(forecastDate.getDate() + Math.ceil(weeksLeft*7));
+
+  // Determine status
+  let status = '';
+  if(avgPerWeek > idealWeeklyPace) status = 'ahead';
+  else if(avgPerWeek === idealWeeklyPace) status = 'on track';
+  else status = 'behind';
+
+  // Color-coded forecast
+  const forecastElement = document.getElementById("forecast");
+  forecastElement.textContent = `Forecast: You will reach your milestone around ${forecastDate.toDateString()} (${status})`;
+  if(status === 'ahead') forecastElement.style.color = 'green';
+  else if(status === 'on track') forecastElement.style.color = 'orange';
+  else forecastElement.style.color = 'red';
+
+// Calculate milestone marker position
+const currentDate = new Date();
+const startDate = new Date(); // set this to the actual course start date
+const elapsedWeeks = Math.floor((currentDate - startDate) / (7*24*60*60*1000));
+const idealSections = Math.min((elapsedWeeks / studyWeeks) * totalGoal, totalGoal);
+
+// Update marker position (percentage)
+const markerPercent = (idealSections / totalGoal) * 100;
+document.getElementById("milestoneMarker").style.left = markerPercent + "%";
+
+
+}
+
+function resetWeek(){
+  weeklyHours = 0;
+  weeklySections = 0;
+  document.getElementById("log").innerHTML = "";
+  updateDisplay();
+  saveData();
+}
+
+function saveData(){
+  const data = {
+    weeklyHours,
+    weeklySections,
+    overallHours,
+    overallSections,
+    logHTML: document.getElementById("log").innerHTML
+  };
+  localStorage.setItem("studyData", JSON.stringify(data));
+}
+</script>
 </body>
 </html>
