--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ button:hover { background: #45a049; }
       <option value="" disabled selected>Hours</option>
       <option value="0.5">0.5</option>
       <option value="1">1</option>
-      <option value="1.5">1.5</option>
+      <option xavalue="1.5">1.5</option>
       <option value="2">2</option>
       <option value="2.5">2.5</option>
       <option value="3">3</option>
